# carrick

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CI_TESTING.md  CLAUDE.md  Cargo.toml  EXAMPLE_OUTPUT.md  LICENSE  LICENSE.md  README.md  TESTING.md  TYPE_CHECKING_INTEGRATION_SUMMARY.md  WARP.md  action.yml  agent_markdown_cross_repo.md  agent_memo.md  build.rs  carrick.json  debug-type-checker.ts  imported_test_output.txt  index.js  plan.md  release-please-config.json  response.json  sample.js  test_debug.txt  test_output.txt  ts_example_workflow.ts
.cargo/: audit.toml
.github/: prompt-leak-baseline.txt
.thoughts/: FINAL_ANALYSIS_REPORT.md  OUTSTANDING_WORK.md  README.md  adding-output-tests-guide.md  analysis_of_logs.md  critique_of_previous_fixes.md  fix_plan_output_issues.md  fixture-harness-handoff.md  framework-coverage-followup.md  framework-coverage.md  framework_agnostic_gaps.md  framework_guidance_agent_design.md  github-oauth.md  growth-playbook.md  migration_status.md  multi_agent_architecture.md  multi_agent_framework_agnostic_analysis.md  phase0_findings.md  phase2_handoff_guide.md  phase2_priority1_complete.md  phase2_priority2_complete.md  phase2_remaining_work.md  phase2_summary.md  project_state_2025.md  public-private-split.md  remaining_issues_analysis.md  service-map-visualization.md  test-coverage-complete.md  test-coverage-progress.md  test-implementation-summary.md
.zed/: settings.json
action/: README.md  action.yml
crates/carrick-match/: Cargo.toml
crates/carrick-match/src/: lib.rs
docs/: README.md  evals.md  function-signature-types.md  monorepo-support.md  per-endpoint-resolved-types.md  plan-duplicate-function-detection.md  plan.md
lambdas/: .gitignore  DEPLOYMENT.md  README.md  build.sh
mcp-server/: .env.example  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
no-config-test/: test-repo.ts
repo-a/: blog-service.js  sample-a.js  sample-b.js  service-calls.js
research/: MOCK_MODE_IMPROVEMENTS.md  PHASE_0_COMPLETE.md  multi_agent_architecture.md
scripts/: install-hooks.sh
site/: index.html
src/: agent_service.rs  analyzer.rs  app_context.rs  call_site_classifier.rs  call_site_extractor.rs  config.rs  demo_naming.rs  env_alias.rs  eval_output.rs  extractor.rs  file_based_router.rs  file_finder.rs  findings.rs  framework_detector.rs  gemini_service.rs  graphql.rs  intent_generator.rs  lib.rs  logging.rs  main.rs  mount_graph.rs  multi_agent_orchestrator.rs  naming_test.rs  oidc.rs  operation.rs  packages.rs  parser.rs  router_context.rs  signature_pass.rs  socket_io.rs  swc_scanner.rs  type_manifest.rs  url_normalizer.rs  utils.rs  visitor.rs  workspace.rs  wrapper_registry.rs
terraform/: api_gateway.tf  cloudwatch.tf  custom_domain.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
test-empty/: empty.js
test-multiple/: package.json  tsconfig.json
test-repo/: carrick.json  package-lock.json  package.json
tests/: consumer_type_extraction_test.rs  dependency_analysis_test.rs  endpoint_matching_test.rs  eval_tier_a.rs  eval_xrepo.rs  extraction_config_test.rs  file_based_routing_test.rs  file_centric_analysis_test.rs  framework_coverage_test.rs  graphql_extraction_test.rs  integration_test.rs  intent_incremental_test.rs  llm_cassette_hard_gate_test.rs  llm_mock_pipeline_test.rs  mock_storage_test.rs  monorepo_test.rs  multi_agent_test.rs  multi_framework_test.rs  output_contract_test.rs  pubsub_wrapper_type_capture_test.rs  sidecar_integration_test.rs  socket_extraction_test.rs  url_alias_matching_test.rs  xrepo_harness_test.rs
ts_check/: check-types.ts  (+6 more)
(+503 files in other folders)
