[package]
name = "carrick"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2.0"
matchit = "0.8.6"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
swc_common = { version = "12.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "12.0.0"
swc_ecma_codegen = "14.0.0"
swc_ecma_parser = "15.0.0"
swc_ecma_visit = "12.0.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.0"
