[package]
name = "carrick"
version = "0.2.7"
edition = "2024"

# Non-virtual workspace on purpose: release-please's rust strategy edits this
# root [package] version, so the root package must stay intact. Members are
# versioned independently, outside release-please.
[workspace]
members = ["crates/carrick-match"]

[dependencies]
async-trait = "0.1"
carrick-match = { path = "crates/carrick-match" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3.32"
graphql-parser = "0.4.1"
indicatif = "0.17"

matchit = "0.8.6"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10"
swc_common = { version = "12.0.1", features = ["tty-emitter"] }
swc_ecma_ast = "12.0.0"
swc_ecma_codegen = "14.0.0"
swc_ecma_parser = "15.0.0"
swc_ecma_transforms_base = "16.0.0"
swc_ecma_visit = "12.0.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
